modified packagejson to include needed modules

--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "ethereum_hackital",
+  "name": "speed",
   "version": "1.0.0",
-  "description": "I like purple trains I like turtles",
-  "main": "main.js",
+  "description": "hackathon",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zachgitt/ethereum_hackital.git"
-  },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/zachgitt/ethereum_hackital/issues"
-  },
-  "homepage": "https://github.com/zachgitt/ethereum_hackital#readme",
   "dependencies": {
-    "traceroute": "^1.0.0"
+    "web3": "github:ethereum/web3.js"
   }
 }
