--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/zachgitt/ethereum_hackital#readme",
   "dependencies": {
-    "traceroute": "^1.0.0"
+    "traceroute": "^1.0.0",
+    "web3": "github:ethereum/web3.js"
   }
 }
